--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,19 +9,27 @@
   weight = 10
 
 [[main]]
- name = "Teaching"
- url = "#teaching"
- weight = 30
+  name = "Research"
+  url = ""
+  weight = 20
+  identifier = "research"
 
 [[main]]
-  name = "Research"
+  name = "Working papers"
   url = "#research"
   weight = 20
+  parent = "research"
 
-# [[main]]
-#   name = "Publications"
-#   url = "#featured"
-#   weight = 40
+[[main]]
+  name = "Work in progress"
+  url = "#projects"
+  weight = 30
+  parent = "research"
+
+[[main]]
+ name = "Teaching"
+ url = "#teaching"
+ weight = 40
 
 [[main]]
   name = "Contact"
